fix minor bug